web/book/tests/documentation/snapshots/documentation__book__project__target__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.postgres\n\nfrom employees\nsort age\ntake 10\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age
LIMIT
  10

